# modernweb-booth-question

./: .gitignore  Cargo.toml  build.rs  index.html  index.js  package.json  webpack.config.js
js/: game.js  index.js
src/: lib.rs
