[package]
name = "modernweb-booth-question"
version = "0.1.0"
authors = ["Tzu-Yin Hong <lili668668@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
colored = "2.0.0"
serde = { version = "1.0.127", features = ["derive"] }
console_error_panic_hook = "0.1.6"

[dependencies.once_cell]
version = "1.8.0"

[dependencies.wasm-bindgen]
version = "0.2.76"
features = ["serde-serialize"]

[build-dependencies]
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
quote = "1.0.9"
